# sqlmesh-tui

./: .gitignore  README.md  pyproject.toml
src/sqlmesh_tui/: app.py  app.tcss
tests/: test_app.py
tests/fixtures/project/: config.yaml
tests/fixtures/project/models/: full_model.sql  incremental_model.sql
tests/fixtures/project/tests/: test_full_model.yaml
