[tool.poetry]
name = "sqlfresh"
version = "0.1.0"
description = "A textual interface for SQLMesh"
authors = ["z3z1ma <butler.alex2010@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
textual = "^0.58.1"
textual-dev = "^1.5.1"
sqlmesh = "^0.94.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
pytest-asyncio = "^0.21.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
